@@ -23,6 +23,7 @@
 - LogWorker prefix for each type of log.
 - Template component now sanitazes file paths.
 - AuthSlave::validateCSRF() now uses hash_equals() for improved security.
+- Improved PDO Exception handling in DataSlave.
 
 #### Fixed
 - Skeleton: Sites folder not accounted for deploy.sh and index.php
